--- a/Neural_Network_Layer_Review.ipynb
+++ b/Neural_Network_Layer_Review.ipynb
@@ -291,6 +291,34 @@
     "\\h_{(5)} & = & \\text{summary}( [ \\text{Machine, Learning, is, easy, not, hard} ]) \\\\\n",
     "\\end{array}"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Dropout\n",
+    "\n",
+    "- Regularization\n",
+    "- Prevents over-fitting\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Normalization\n",
+    "\n",
+    "- For use in very deep networks\n",
+    "- Keeps distribution of layer outputs \"normalized\""
+   ]
   }
  ],
  "metadata": {
@@ -323,7 +351,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
