--- a/RNN_in_action.ipynb
+++ b/RNN_in_action.ipynb
@@ -637,7 +637,7 @@
     "\n",
     "For the prediction, we usually *deterministically* choose the element of $V$ with highest probability\n",
     "$$\n",
-    "\\hat{\\y} = \\text{argmax}_{v \\in V} { p(v) }\n",
+    "\\hat{\\y} = \\argmax{v \\in V} { \\pr{v} }\n",
     "$$"
    ]
   },
@@ -744,6 +744,35 @@
     "- Takes the fixed length representation of the seed produced by the Encoder\n",
     "    - Used to initialized the Decoder's latent state $\\h_{(0)}$\n",
     "- Outputs a variable length sequence"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Generative text: state of the art\n",
+    "\n",
+    "The model we described (and will explore in a code example) is absolutely primitive\n",
+    "- Predict next *character* rather than next *word*\n",
+    "- Simple: one RNN layer\n",
+    "- Trained on very small number of examples\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "[Here](https://app.inferkit.com/demo) is a link to a state of the art model.\n",
+    "\n",
+    "We will learn about its architecture in a later module."
    ]
   },
   {
