--- a/Training_Neural_Networks_Overview.ipynb
+++ b/Training_Neural_Networks_Overview.ipynb
@@ -160,8 +160,8 @@
     "\\W^* = \\argmin{W} L(\\hat{\\y},\\y; \\W)\n",
     "$$\n",
     "\n",
-    "can be found by using \n",
-    "[Back propagation](Training_Neural_Network_Backprop.ipynb)\n",
+    "can be found by using Back Propagation\n",
+    "([see the earlier module](Training_Neural_Network_Backprop.ipynb))\n",
     "to compute the derivatives needed by the Gradient Descent algorithm.\n"
    ]
   },
