--- a/Training_Neural_Networks_Scaling_and_Initialization.ipynb
+++ b/Training_Neural_Networks_Scaling_and_Initialization.ipynb
@@ -171,8 +171,39 @@
     }
    },
    "source": [
+    "# Impediments to learning\n",
+    "\n",
+    "The updating of weights, used by Gradient Descent to minimize the loss, can be inhibited in less-than-obvious manners.\n",
+    "\n",
+    "In this module, we explore these impediments.\n",
+    "\n",
+    "This will motivate the creation of a new class of Layer-types: Normalization."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "# Proper scaling of inputs\n",
     "\n",
+    "We briefly explore the statistical properties of the outputs of a layer.\n",
+    "- We show how some of these properties can inhibit learning (weight update)\n",
+    "- Will motivate the Normalization Layer-type, which will maintain good properties of layer outputs\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "## Importance of zero centered inputs (for each layer)\n",
     "[Efficient Backprop paper, LeCunn98](http://yann.lecun.com/exdb/publis/pdf/lecun-98b.pdf)\n",
     "\n",
@@ -197,14 +228,27 @@
     }
    },
    "source": [
-    "Over-simplifying:\n",
-    "- the local derivative is proportional to the input:\n",
+    "Let's look into the per example loss in more detail.\n",
+    "\n",
+    "\n",
+    "Since $\\W_\\llp$ is a vector, the derivative wrt $\\W_\\llp$ is a vector of derivatives:\n",
     "$$\n",
-    "\\frac{ \\partial{\\y_\\llp^\\ip} } { \\partial \\W_\\llp } = a'_\\llp \\y_{(\\ll-1)}^\\ip\n",
+    "\\frac{ \\partial{\\y_\\llp^\\ip} } { \\partial \\W_\\llp } =\n",
+    "\\begin{pmatrix} \n",
+    "\\ldots , \\frac{ \\partial{\\y_\\llp^\\ip} } { \\partial \\W_{\\llp,} }, \\ldots, \n",
+    "\\end{pmatrix}\n",
     "$$\n",
-    "for FC $y_\\llp = a_\\llp ( \\y_{(\\ll-1)} \\W_\\llp )$.\n",
-    "- thus the updates of $\\W_{\\llp,j}$ will be biased by $\\bar{\\y}_{(\\ll-1),j}$ = the average (over examples $i$) of $\\y_{(\\ll-1),j}^\\ip$\n",
-    "- for $\\ll = 1$, this is the average of the input feature $\\x_j$"
+    "\n",
+    "Examining the $j^{th}$ \n",
+    "$$\n",
+    "\\begin{array} \\\\\n",
+    "\\frac{ \\partial{\\y_\\llp^\\ip} } { \\partial \\W_{\\llp,j} } & = & \\frac{ \\partial{ a_\\llp ( \\y_{(\\ll-1)}\\cdot \\W_\\llp ) } } { \\partial \\W_{\\llp,j}} &  \\text{ when layer } \\ll \\text{ is Dense since }  y_\\llp = a_\\llp ( \\y_{(\\ll-1)} \\cdot \\W_\\llp ) \\; \\\\\n",
+    "& = &  \\frac{ \\partial{ a_\\llp ( \\y_{(\\ll-1)}\\cdot \\W_\\llp )} } { \\partial (\\y_{(\\ll-1)}\\cdot \\W_{\\llp})}\n",
+    "       \\frac{ \\partial{(\\y_{(\\ll-1)}\\cdot \\W_\\llp)} }{ \\W_{\\llp,j} } & \\text{Chain rule} \\\\\n",
+    "& =& a'_\\llp \\y_{(\\ll-1),j}^\\ip & \\text{ since }  \\y_{(\\ll-1)}\\cdot \\W_\\llp = \\sum_j { ( \\y_{(\\ll-1),j} * \\W_{\\llp,j} ) }\\\\\n",
+    " & & & \\text{where } a' = \\frac{ \\partial{ a_\\llp ( \\y_{(\\ll-1)}\\cdot \\W_{\\llp}) } } { \\partial (\\y_{(\\ll-1)}\\cdot \\W_{\\llp})}\\\\\n",
+    "\\end{array}\n",
+    "$$"
    ]
   },
   {
@@ -215,7 +259,44 @@
     }
    },
    "source": [
-    "In the particular case that each feature $j$'s average $\\bar{\\x}_j$ has the same sign:\n",
+    "This is the per-example loss for example $i$.\n",
+    "\n",
+    "- The (total) Loss $\\frac{\\partial \\loss }{\\partial W_\\llp}$ is averaged across all $m$ examples\n",
+    "- So the derivative of the Loss (with respect to the $j^{th}$ weight) will have the term\n",
+    "$$\n",
+    "\\sum_{i=0}^m {  \\y_{(\\ll-1),j}^\\ip  }\n",
+    "$$\n",
+    "\n",
+    "Thus, the update to $\\W_{\\llp, j}$ will be proportional to the average (across the $m$ examples) of $j^{th}$ input to layer $\\ll$.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "To be concrete, let's focus on layer $1$, where \n",
+    "$$\\y_{(\\ll -1),j} = \\x_j$$\n",
+    "so that\n",
+    "$$\n",
+    "\\sum_{i=0}^m {  \\y_{(\\ll-1),j}^\\ip  } = \\bar\\x_j\n",
+    "$$\n",
+    "i.e., the average (across examples) value of input feature $j$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "In the particular case that the average $\\bar{\\x}_j$ of *every* feature $j$ has the same sign:\n",
     "- updates in all dimensions will have the same sign\n",
     "- this can result in an indirect \"zig-zag\" toward the optimum\n",
     "    - Example: two dimensions: \n",
@@ -232,9 +313,11 @@
     }
    },
    "source": [
-    "- Note that this is an issue for *all* layers, not just layer $\\ll =1$.\n",
+    "Although we have illustrated this issue using layer $1$, the issue applies to each layer.\n",
     "\n",
-    "- Also note: the problem is compounded by activations whose outputs are not zero-centered (e.g., ReLU, sigmoid)"
+    "In fact, the issue may be more likely in deeper layers\n",
+    "- when the activation of layer $(\\ll-1)$ is *not* zero-centered, e.g., the ReLU and sigmoid\n",
+    "\n"
    ]
   },
   {
@@ -381,7 +464,7 @@
    "source": [
     "## Glorot initialization\n",
     "\n",
-    "We have previously shown that each element $j$ of the first input layer ($\\x_{(0),j}$) should\n",
+    "We have previously argued that each element $j$ of the first input layer ($\\x_{(0),j}$) should\n",
     "have unit variance across the training set.  \n",
     "\n",
     "This was meant to ensure that the first layer's weights\n",
@@ -608,7 +691,7 @@
     "- Before good weight initialization techniques were discovered\n",
     "- A technique called *Layer-wise pre-training* was very popular\n",
     "\n",
-    "This technique is best discussed after we introduce Autoencoders but, for now:"
+    "We can motivate this technique by briefly introducing an Autoencoder network.\n"
    ]
   },
   {
@@ -619,10 +702,54 @@
     }
    },
    "source": [
+    "<table>\n",
+    "    <tr>\n",
+    "        <th><center>Autoencoder</center></th>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td>\n",
+    "            <img src=\"images/Autoencoder_vanilla.jpg\">\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "An Autoencoder network has two parts\n",
+    "- An Encoder, which takes input $\\x$ and \"encodes\" it into $\\z$\n",
+    "- A Decoder, which takes the encoding $\\z$ and tries to reproduce $\\x$\n",
+    "\n",
+    "Each part has its own weights, which can be discovered through training, with examples\n",
+    "- $\\langle \\X, \\y \\rangle = \\langle \\X, \\X \\rangle$\n",
+    "\n",
+    "When the dimension of $\\z$ is less than the dimension of $\\x$, $\\z$ becomes a *reduced-dimensionality* approximation of $\\x$.\n",
+    "\n",
+    "This is quite similar to discovering Principal Components.\n",
+    "- We discover a small number of synthetic features $\\z$ that summarize the diversity of $\\y_{(\\ll-1)}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "What does this have to do with layer-wise initialization of weights ?\n",
+    "\n",
     "Suppose we want to initialize the weights of layer $\\ll$\n",
-    "- We *temporarily* create a two layer sub-network consisting of layers $\\ll$ and a \"Decoder\" layer\n",
-    "- Let $\\y_{(\\ll+1)}'$ denote the  output of this two layer network\n",
-    "- This two layer network has input $\\y_{(\\ll-1)}$ and output $\\y_{(\\ll+1)}'$"
+    "- We *temporarily* create a two layer Autoencoder network with layer $\\ll$ serving the role of Encoder\n",
+    "- We train this temporary Autoencoder\n",
+    "- This initializes the weights of layer $\\ll$\n",
+    "- We discard the Decoder"
    ]
   },
   {
@@ -633,54 +760,13 @@
     }
    },
    "source": [
-    "We train this two layer network with training examples\n",
+    "The weights we create\n",
+    "- Are not random, they meet the Autoencoder task objective\n",
+    "- Perhaps non-random weights are better initializers because they discover some structure of the input\n",
     "\n",
-    "$$ \\langle \\y_{(\\ll-1)}, \\y_{(\\ll-1)} \\rangle= [ \\y^\\ip_{(\\ll-1)}, \\y^\\ip_{(\\ll-1)} \\; | \\; 1 \\le i \\le m ]$$\n",
-    "\n",
-    "That is: we are asking the two layer network to implement the identity function"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "To avoid making this trivial\n",
-    "- The Decoder creates a \"bottle-neck\": a layer with a small number of units\n",
-    "- The small number prevents the Decoder from memorizing the inputs\n",
-    "- This is a form of *dimensionality reduction* (like Principal Components Analysis)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "Like Principal Components Analysis\n",
-    "- We are asking the two layer network\n",
-    "- To discover a small number of synthetic features that summarize the diversity of $\\y_{(\\ll-1)}$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "The weights discovered by this procedure become the initial weights of layer $\\ll$\n",
-    "- The Decoder is then dropped\n",
-    "- And we proceed to find initial weights for layer $(\\ll+1)$.\n",
-    "\n",
-    "These weights *may or may not* be useful in predicting $\\hat{\\y} = \\y_{(L)}$\n",
-    "- But they are probably better than *random* weights"
+    "Transfer Learning (the subject of another module) works in a similar manner\n",
+    "- Use the weights obtained from training on a Source task\n",
+    "- To use as initial weights for a second Target task"
    ]
   },
   {
@@ -693,11 +779,27 @@
    "source": [
     "# Normalization\n",
     "\n",
-    "- We addressed the importance of normalization of the inputs to layer $\\ll = 1$.\n",
-    "- The same argument applies to *all* layers $\\ll > 0$\n",
+    "We addressed the importance of normalization of the inputs to layer $\\ll = 1$.\n",
     "\n",
-    "We discuss some Normalization methods that attempt to keep the distribution of $\\y_{\\llp,j}$\n",
-    "normalized through all layers $\\ll$.\n"
+    "The same argument applies to *all* layers $\\ll > 0$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "This motivates the introduction of a new class of layer-types: Normalization layers\n",
+    "\n",
+    "- These layer types attempt to keep the distribution of $\\y_{\\llp,j}$\n",
+    "normalized through all layers $\\ll$.\n",
+    "- They become necessary for *very deep* (large number of layers) networks\n",
+    "\n",
+    "Normalization layers were one of the innovations that advanced Deep Learning\n",
+    "by enabling learning in networks of extreme depth."
    ]
   },
   {
@@ -790,10 +892,10 @@
     "\n",
     "$\n",
     "\\begin{split}\n",
-    "1.\\quad & \\mathbf{\\mu}_B = \\dfrac{1}{m_B}\\sum\\limits_{i=1}^{m_B}{\\mathbf{x}^{(i)}}\\\\\n",
-    "2.\\quad & {\\mathbf{\\sigma}_B}^2 = \\dfrac{1}{m_B}\\sum\\limits_{i=1}^{m_B}{(\\mathbf{x}^{(i)} - \\mathbf{\\mu}_B)^2}\\\\\n",
-    "3.\\quad & \\hat{\\mathbf{x}}^{(i)} = \\dfrac{\\mathbf{x}^{(i)} - \\mathbf{\\mu}_B}{\\sqrt{{\\mathbf{\\sigma}_B}^2 + \\epsilon}}\\\\\n",
-    "4.\\quad & \\mathbf{z}^{(i)} = \\gamma \\hat{\\mathbf{x}}^{(i)} + \\beta\n",
+    "1.\\quad & \\mathbf{\\mu}_B = \\dfrac{1}{m_B}\\sum\\limits_{i=1}^{m_B}{\\mathbf{x}^\\ip} & \\quad  \\text{Batch mean}\\\\\n",
+    "2.\\quad & {\\mathbf{\\sigma}_B}^2 = \\dfrac{1}{m_B}\\sum\\limits_{i=1}^{m_B}{(\\mathbf{x}^\\ip - \\mathbf{\\mu}_B)^2} & \\quad \\text{Batch variance} \\\\\n",
+    "3.\\quad & \\hat{\\mathbf{x}}^\\ip = \\dfrac{\\mathbf{x}^\\ip - \\mathbf{\\mu}_B}{\\sqrt{{\\mathbf{\\sigma}_B}^2 + \\epsilon}} & \\quad \\text{Standardize } \\x^\\ip\\\\\n",
+    "4.\\quad & \\mathbf{z}^\\ip = \\gamma \\hat{\\mathbf{x}}^\\ip + \\beta  & \\quad \\text{De-Standardize } \\hat\\x^\\ip  \\text{ with learned mean and variance}\\\\\n",
     "\\end{split}\n",
     "$"
    ]
@@ -932,9 +1034,12 @@
    "source": [
     "# Conclusion\n",
     "\n",
-    "Initialization is like priming a pump: we want our gradients and learning to flow smoothly.\n",
+    "Maintaining good properties of layer inputs throughout the depth of a multi-layer network\n",
+    "is like priming a pump.\n",
     "\n",
-    "Proper initialization not only facilitates learning, but may actually speed up training (e.g. Batch Normalization)."
+    "Proper priming helps our learning to flow smoothly.\n",
+    "\n",
+    "We explored some of the stumbling blocks to learning (weight update) along with their solutions."
    ]
   },
   {
@@ -994,7 +1099,7 @@
     "width": "370.547px"
    },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
