--- a/Training_Neural_Networks_Tweaks.ipynb
+++ b/Training_Neural_Networks_Tweaks.ipynb
@@ -310,7 +310,9 @@
     "\n",
     "These include regularization penalties that aim to reduce the number of parameters.\n",
     "- L2 regularization\n",
-    "- L1 regularization"
+    "- L1 regularization\n",
+    "\n",
+    "Note that Keras also allows you to apply regularization to *each layer*."
    ]
   },
   {
