--- a/Index.ipynb
+++ b/Index.ipynb
@@ -294,6 +294,7 @@
     "  \n",
     "Deeper dives\n",
     "- [Other matrix factorization methods](Unsupervised_Other_Factorizations.ipynb)\n",
+    "- [Missing data: clever ways to impute values](Missing_Data.ipynb)\n",
     "\n",
     "## Deep Learning: Headstart\n",
     "\n",
@@ -339,6 +340,8 @@
     "- Practical Colab\n",
     "<!--- The Colab notebook imports some modules; make sure they are in the repo --->\n",
     "<!--- #include (neural_net_helper.py) --->\n",
+    "<!--- The Colab notebook imports some modules; make sure they are in the repo --->\n",
+    "<!--- #include (Colab_practical.ipynb)) --->\n",
     "   - **Colab**: [Practical Colab Notebook from github](https://colab.research.google.com/github/kenperry-public/ML_Fall_2021/blob/master/Colab_practical.ipynb)\n",
     " \n",
     "**Neural network theory**\n",
@@ -433,6 +436,43 @@
     "- [Training Neural Networks: fine details](Training_Neural_Networks_Overview.ipynb)\n",
     "- [What layer type to choose](Neural_Network_Layer_Review.ipynb)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Week 5 Transfer Learning\n",
+    "\n",
+    "**Plan**\n",
+    "\n",
+    "We continue with skills to turn you into a more effective Data Scientist.\n",
+    "\n",
+    "Our first step is trying to develop intuition for what is occurring within a Neural Network.\n",
+    "\n",
+    "We will then present an extremely useful trick for leveraging the hard work that others have done.\n",
+    "\n",
+    "- [Interpretation: preview](Interpretation_preview.ipynb)\n",
+    "\n",
+    "- [Transfer Learning](Transfer_Learning.ipynb)\n",
+    "\n",
+    "     - [Transfer Learning example from github](https://colab.research.google.com/github/kenperry-public/ML_Fall_2021/blob/master/TransferLearning_demo.ipynb) (**Colab**)\n",
+    "     - [Transfer Learning example from github](TransferLearning_demo.ipynb) (**local machine**)\n",
+    "\n",
+    "     - [Utility notebook](Dogs_and_Cats_reformat.ipynb)\n",
+    "         - Takes the *very large* raw data (from Kaggle) used in the Transfer Learning example\n",
+    "         - Creates a much smaller subset, using a different directory structure\n",
+    "         - The above notebook uses this reorganized, smaller subset\n",
+    "\n",
+    "**Deeper Dives**\n",
+    "- [Tensors: Matrix gradients](Matrix_Gradient.ipynb)\n",
+    "\n",
+    "**Further reading**\n",
+    "- [Sebastian Ruder: Transfer Learning](https://ruder.io/transfer-learning/)"
    ]
   },
   {
