--- a/Index.ipynb
+++ b/Index.ipynb
@@ -412,9 +412,21 @@
     "    - [LSTM_text_generation from github](https://colab.research.google.com/github/kenperry-public/ML_Fall_2021/blob/master/Keras_examples_LSTM_text_generation.ipynb) (**Colab**)\n",
     "    - [LSTM_text_generation from github](Keras_examples_LSTM_text_generation.ipynb) (**local machine**)\n",
     "\n",
+    "**Review of layer types**\n",
+    "- [What layer type to choose](Neural_Network_Layer_Review.ipynb)\n",
+    "\n",
+    "Sprint is over ! We have covered the basic layer types; time for you to learn by experimenting.\n",
+    "\n",
+    "In the remaining weeks, we will learn advanced concepts, motivated by the question\n",
+    ">What took so long ?\n",
+    "\n",
+    "**Training Neural Networks: the fine details**\n",
+    "- [Training Neural Networks: fine details](Training_Neural_Networks_Overview.ipynb)\n",
+    "\n",
     "\n",
     "**Deeper dives**\n",
-    "- [RNN: How to deal with long sequences](RNN_Long_Sequences.ipynb)\n"
+    "- [RNN: How to deal with long sequences](RNN_Long_Sequences.ipynb)\n",
+    "- [Tensors: Matrix gradients](Matrix_Gradient.ipynb)\n"
    ]
   },
   {
@@ -425,16 +437,38 @@
     }
    },
    "source": [
-    "# Week 4 Training Neural Networks\n",
+    "# Week 4 Advanced Recurrent Architectures\n",
     "\n",
     "**Plan**\n",
     "\n",
-    "Sprint is over ! We have covered the basic layer types; time for you to learn by experimenting.\n",
     "\n",
-    "Explore the science and art of training a neural network via Gradient Descent.\n",
+    "We wrap up the \"What took so long ?\" discussion (i.e., the nitty-gritty details of training a neural network_\n",
     "\n",
-    "- [Training Neural Networks: fine details](Training_Neural_Networks_Overview.ipynb)\n",
-    "- [What layer type to choose](Neural_Network_Layer_Review.ipynb)\n",
+    "The discussion reveals problems that arise in training neural networks and motivates the introduction of new layer types that address the issues.\n",
+    "\n",
+    "We continue the discussion of problems that are specific to RNNs.\n",
+    "\n",
+    "The \"vanilla\" Recurrent Neural Network (RNN) layer we learned is very much exposed to the problem of vanishing/exploding gradients.\n",
+    "\n",
+    "We will review the issue and demonstrate a related layer type (the LSTM) designed to mitigate the problem.\n",
+    "\n",
+    "**A state of the art Generative model** (meant to show it last week)\n",
+    "- [A state of the art Generative model](RNN_in_action.ipynb#Generative-text:-state-of-the-art)\n",
+    "\n",
+    "**Training neural networks (continued)**\n",
+    "- [Training Neural Networks:Initializing weights (continued)](Training_Neural_Networks_Scaling_and_Initialization.ipynb#Initialization)\n",
+    "\n",
+    "- [Training Neural Networks: Improving trainability](Training_Neural_Networks_Overview.ipynb#Improving-trainability)\n",
+    "\n",
+    "**RNN: Issues**\n",
+    "- [Gradients of an RNN](RNN_Gradients.ipynb)\n",
+    "- [RNN: Gradients that Vanish/Explode](RNN_Vanishing_and_exploding_gradients.ipynb)\n",
+    "- [Residual connections](RNN_Residual_Networks.ipynb)\n",
+    "\n",
+    "**LSTM: An improved RNN**\n",
+    "- [Neural Programming](Neural_Programming.ipynb)\n",
+    "- [Introduction to the LSTM](Intro_to_LSTM.ipynb)\n",
+    "- [LSTM Overview](LSTM_Overview.ipynb)\n",
     "\n"
    ]
   },
@@ -446,17 +480,19 @@
     }
    },
    "source": [
-    "# Week 5 Transfer Learning\n",
+    "# Week 5 Transfer Learning; Natural Language Processing\n",
     "\n",
     "**Plan**\n",
     "\n",
-    "We continue with skills to turn you into a more effective Data Scientist.\n",
+    "We  present an extremely useful trick for leveraging the hard work that others have done.\n",
     "\n",
-    "Our first step is trying to develop intuition for what is occurring within a Neural Network.\n",
+    "Next we try to develop intuition for what is occurring within a Neural Network.\n",
     "\n",
-    "We will then present an extremely useful trick for leveraging the hard work that others have done.\n",
+    "We will also introduce a powerful mechanism called Attention that has recently become quite popular and\n",
+    "important.\n",
     "\n",
-    "- [Interpretation: preview](Interpretation_preview.ipynb)\n",
+    "**Plan**\n",
+    "We will make an initial pass on the topic of learning from text: Natural Language Processing.\n",
     "\n",
     "- [Transfer Learning](Transfer_Learning.ipynb)\n",
     "\n",
@@ -468,11 +504,71 @@
     "         - Creates a much smaller subset, using a different directory structure\n",
     "         - The above notebook uses this reorganized, smaller subset\n",
     "\n",
-    "**Deeper Dives**\n",
-    "- [Tensors: Matrix gradients](Matrix_Gradient.ipynb)\n",
+    "    \n",
+    "**Interpretation**\n",
+    "- [Interpretation: preview](Interpretation_preview.ipynb)\n",
+    "\n",
+    "**Learning from text: Deep Learning for Natural Language Processing (NLP)**\n",
+    "- [Natural Language Processing Overview](NLP_Overview.ipynb)\n",
+    "    - [NLP from github (Colab)](https://colab.research.google.com/github/kenperry-public/ML_Fall_2021/blob/master/Keras_examples_imdb_cnn.ipynb)\n",
+    "    - [NLP from github (local machine)](Keras_examples_imdb_cnn.ipynb)\n",
     "\n",
     "**Further reading**\n",
-    "- [Sebastian Ruder: Transfer Learning](https://ruder.io/transfer-learning/)"
+    "- [Sebastian Ruder: Transfer Learning](https://ruder.io/transfer-learning/)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Week 6 Attention\n",
+    "\n",
+    "**Attention**\n",
+    "- [Attention](Intro_to_Attention.ipynb)\n",
+    "- [Implementing Attention](Attention_Lookup.ipynb)\n",
+    "\n",
+    "**Further reading**\n",
+    "- Attention\n",
+    "    - [Neural Machine Translation by Jointly Learning To Align and Translate](https://arxiv.org/pdf/1409.0473.pdf)\n",
+    "    - [Attention is all you need](https://arxiv.org/pdf/1706.03762.pdf)mm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Week 7 Advanced Topics\n",
+    "\n",
+    "**Continued from last week**\n",
+    "\n",
+    "**Attention**\n",
+    "- [Attention](Intro_to_Attention.ipynb)\n",
+    "- [Implementing Attention](Attention_Lookup.ipynb)\n",
+    "\n",
+    "**What is a Neural Network really doing ? Interpretation**\n",
+    "- [Introduction to Interpretation of Deep Learning](Intro_to_Interpretation_of_DL.ipynb)\n",
+    "- [Interpretation: Simple Methods](Interpretation_of_DL_Simple.ipynb)\n",
+    "- [Interpretation: Saliency Maps](Interpretation_of_DL_Deconv.ipynb)\n",
+    "- [Interpretation: Gradient Ascent](Interpretation_of_DL_Gradient_Ascent.ipynb)\n",
+    "- [Adversarial Examples](Adversarial_Examples.ipynb)\n",
+    "\n",
+    "**Wrapping up**\n",
+    "- [Final thoughts](Deep_Learning_Coda.ipynb)\n",
+    "\n",
+    "**Deeper Dives**\n",
+    "- [Interpretation using Principal Components](Interpretation_of_DL_Simple_PCA.ipynb)\n",
+    "- [Interpretation: Attention](Interpretation_of_DL_Attention.ipynb)\n",
+    "\n",
+    "**Further reading**\n",
+    "- [Visualizing and Understanding Convolutional Networks](https://arxiv.org/pdf/1311.2901.pdf)\n"
    ]
   },
   {
@@ -579,6 +675,34 @@
     "- Assignment notebook [Ships in satellite images: Neural Network](assignments/CNN_intro/Ships_in_satellite_images_P2.ipynb)\n",
     "- Data (same as for the Classification assignment)\n",
     "    - please repeat the directions given in that assignment for obtaining the data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Stock prediction\n",
+    "\n",
+    " - Assignment notebooks:\n",
+    "    - [Stock prediction](assignments/stock_prediction/Final_project_StockPrediction.ipynb)\n",
+    "    - [Submission guidelines](assignments/stock_prediction/Final_project.ipynb)\n",
+    "   \n",
+    " - Data\n",
+    "    - There is an archive file containing the data\n",
+    "    - You can find it\n",
+    "        - Under the course page: Content --> Data --> Assignments --> Stock Prediction\n",
+    "        - You won't be able to view the file in the browser, but you **will** be able to Download it\n",
+    "    - You should unzip this archive into the *the same directory* as the assignment notebook\n",
+    "    - The end result is that the directory should contain\n",
+    "        - The assignment notebook, submission guidelines notebook\n",
+    "        - A directory named `Data/train`\n",
+    "\n",
+    "        - The assignment notebook and a helper file\n",
+    "        - A directory named `Data`\n"
    ]
   }
  ],
