--- a/Neural_Network_Layer_Review.ipynb
+++ b/Neural_Network_Layer_Review.ipynb
@@ -310,6 +310,56 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<table>\n",
+    "    <tr>\n",
+    "        <th><center>NN, no dropout layer</center></th>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "            <td><img src=\"images/Dropout_NN_1.png\" width=80%</td>\n",
+    "    </tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<table>\n",
+    "    <tr>\n",
+    "        <th><center>NN, Droput layer, no dropout</center></th>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "            <td><img src=\"images/Dropout_NN_2.png\" width=80%</td>\n",
+    "    </tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<table>\n",
+    "    <tr>\n",
+    "        <th><center>NN, Dropout layer, 25% dropout</center></th>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "            <td><img src=\"images/Dropout_NN_3.png\" width=80%</td>\n",
+    "    </tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "slide"
     }
    },
@@ -349,7 +399,12 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "369.594px"
+   },
    "toc_section_display": true,
    "toc_window_display": true
   }
