--- a/RNN_in_action.ipynb
+++ b/RNN_in_action.ipynb
@@ -365,7 +365,7 @@
    "source": [
     "<table>\n",
     "    <tr>\n",
-    "        <th><center>Predict the next</center></th>\n",
+    "        <th><center>Predict the next: Training</center></th>\n",
     "    </tr>\n",
     "    <tr>\n",
     "        <td><img src=\"images/RNN_layer_loss.png\"</td>\n",
@@ -772,7 +772,10 @@
    "source": [
     "[Here](https://app.inferkit.com/demo) is a link to a state of the art model.\n",
     "\n",
-    "We will learn about its architecture in a later module."
+    "We will learn about its architecture in a later module.\n",
+    "- 3 billion weights !\n",
+    "- Trained on 500 billion tokens\n",
+    "    - Used \\\\$ 42K of electricity"
    ]
   },
   {
