--- a/Training_Neural_Networks_Overview.ipynb
+++ b/Training_Neural_Networks_Overview.ipynb
@@ -274,7 +274,7 @@
    "source": [
     "<table>\n",
     "    <tr>\n",
-    "        <th><center>\"Big\" NN with dead nodes</center></th>\n",
+    "        <th><center>\"Big\" NN -- some nodes are dead</center></th>\n",
     "    </tr>\n",
     "    <tr>\n",
     "        <td><img src=\"images/Dropout_NN_wo_dropout.png\"</td>\n",
