--- a/Training_Neural_Networks_Scaling_and_Initialization.ipynb
+++ b/Training_Neural_Networks_Scaling_and_Initialization.ipynb
@@ -239,7 +239,7 @@
     "\\end{pmatrix}\n",
     "$$\n",
     "\n",
-    "Examining the $j^{th}$ \n",
+    "Examining the $j^{th}$ element of the derivative vector:\n",
     "$$\n",
     "\\begin{array} \\\\\n",
     "\\frac{ \\partial{\\y_\\llp^\\ip} } { \\partial \\W_{\\llp,j} } & = & \\frac{ \\partial{ a_\\llp ( \\y_{(\\ll-1)}\\cdot \\W_\\llp ) } } { \\partial \\W_{\\llp,j}} &  \\text{ when layer } \\ll \\text{ is Dense since }  y_\\llp = a_\\llp ( \\y_{(\\ll-1)} \\cdot \\W_\\llp ) \\; \\\\\n",
@@ -259,15 +259,16 @@
     }
    },
    "source": [
-    "This is the per-example loss for example $i$.\n",
+    "This is for $\\loss^\\ip$, the per-example loss for example $i$.\n",
     "\n",
-    "- The (total) Loss $\\frac{\\partial \\loss }{\\partial W_\\llp}$ is averaged across all $m$ examples\n",
-    "- So the derivative of the Loss (with respect to the $j^{th}$ weight) will have the term\n",
+    "The (total) Loss $\\loss$ is averaged across all $m'$ examples in the mini-batch\n",
+    "\n",
+    "So the derivative of the Loss (with respect to the $j^{th}$ weight) $\\frac{\\partial \\loss }{\\partial W_{\\llp, j}}$ will have the term\n",
     "$$\n",
-    "\\sum_{i=0}^m {  \\y_{(\\ll-1),j}^\\ip  }\n",
+    "\\sum_{i=0}^{m'} {  \\y_{(\\ll-1),j}^\\ip  }\n",
     "$$\n",
     "\n",
-    "Thus, the update to $\\W_{\\llp, j}$ will be proportional to the average (across the $m$ examples) of $j^{th}$ input to layer $\\ll$.\n",
+    "Thus, the update to $\\W_{\\llp, j}$ will be proportional to the average (across the $m'$ examples) of the $j^{th}$ input to layer $\\ll$.\n",
     "\n"
    ]
   },
@@ -297,12 +298,11 @@
    },
    "source": [
     "In the particular case that the average $\\bar{\\x}_j$ of *every* feature $j$ has the same sign:\n",
-    "- updates in all dimensions will have the same sign\n",
-    "- this can result in an indirect \"zig-zag\" toward the optimum\n",
-    "    - Example: two dimensions: \n",
-    "        - We can navigate the loss surface north-east or south-west only ! \n",
-    "        - To get to a point north-west from the current, we have to zig-zag.\n",
-    "        "
+    "- updates in all weight dimensions will have the same sign (the sign of $a'$)\n",
+    "- Example: two dimensions.  The weight space is $\\W_{\\llp,0} \\times \\W_{\\llp,1}$\n",
+    "    - We can navigate the the loss surface by moving in the weight space north-east or south-west only ! \n",
+    "    - this can result in an indirect \"zig-zag\" toward the optimum\n",
+    "        - To get to a point south-east from the current, we have to zig-zag.\n"
    ]
   },
   {
@@ -317,7 +317,12 @@
     "\n",
     "In fact, the issue may be more likely in deeper layers\n",
     "- when the activation of layer $(\\ll-1)$ is *not* zero-centered, e.g., the ReLU and sigmoid\n",
-    "\n"
+    "\n",
+    "This will motivate the creation of a new layer type whose purpose will be to keep the inputs to successive layers zero-centered.\n",
+    "\n",
+    "**Note**\n",
+    "\n",
+    "Although we zero center the $m$ examples in the training set, the $m' \\lt m$ examples in any mini-batch will not necessarily be zero mean in all features."
    ]
   },
   {
@@ -729,7 +734,22 @@
     "Each part has its own weights, which can be discovered through training, with examples\n",
     "- $\\langle \\X, \\y \\rangle = \\langle \\X, \\X \\rangle$\n",
     "\n",
-    "When the dimension of $\\z$ is less than the dimension of $\\x$, $\\z$ becomes a *reduced-dimensionality* approximation of $\\x$.\n",
+    "That is: we are asking the output to be identical to the input."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "This will not be possible\n",
+    "when the dimension of $\\z$ is less than the dimension of $\\x$.\n",
+    "- $\\z$ is a *bottle-neck*\n",
+    "\n",
+    "$\\z$ becomes a *reduced-dimensionality* approximation of $\\x$.\n",
     "\n",
     "This is quite similar to discovering Principal Components.\n",
     "- We discover a small number of synthetic features $\\z$ that summarize the diversity of $\\y_{(\\ll-1)}$"
