--- a/Training_Neural_Networks_Tweaks.ipynb
+++ b/Training_Neural_Networks_Tweaks.ipynb
@@ -345,11 +345,12 @@
    "source": [
     "<table>\n",
     "    <tr>\n",
-    "        <th><center>NN, no dropout</center></th>\n",
+    "        <th><center>NN, Droput layer, no dropout</center></th>\n",
     "    </tr>\n",
     "    <tr>\n",
-    "        <td><img src=\"images/Dropout_NN_wo_dropout.png\"</td>\n",
-    "    </tr>\n"
+    "            <td><img src=\"images/Dropout_NN_2.png\" width=80%</td>\n",
+    "    </tr>\n",
+    "</table>"
    ]
   },
   {
@@ -362,11 +363,12 @@
    "source": [
     "<table>\n",
     "    <tr>\n",
-    "        <th><center>NN, 50% dropout</center></th>\n",
+    "        <th><center>NN, Dropout layer, 25% dropout</center></th>\n",
     "    </tr>\n",
     "    <tr>\n",
-    "        <td><img src=\"images/Dropout_NN_w_dropout.png\"></td>\n",
-    "    </tr>\n"
+    "            <td><img src=\"images/Dropout_NN_3.png\" width=80%</td>\n",
+    "    </tr>\n",
+    "</table>"
    ]
   },
   {
@@ -435,7 +437,9 @@
     "Alter the image while preserving its label.\n",
     "\n",
     "- Image transformation\n",
-    "    - rotate, crop, flip"
+    "    - rotate, crop, flip\n",
+    "    \n",
+    "[Image Data Augmentation example](http://localhost:8888/notebooks/NYU/DataAugmentation/Data_augmentation.ipynb#Original-image)"
    ]
   },
   {
