--- a/Transfer_Learning.ipynb
+++ b/Transfer_Learning.ipynb
@@ -500,7 +500,9 @@
    },
    "source": [
     "# Model zoo\n",
-    "[Open source, pre-trained models](https://modelzoo.co)"
+    "[Open source, pre-trained models](https://modelzoo.co)\n",
+    "- [YOLO: object detection and classification](https://modelzoo.co/model/yolo-tensorflow)\n",
+    "- [OpenPose: Human body, hand and facial keypoints](https://github.com/CMU-Perceptual-Computing-Lab/openpose/blob/master/.github/media/pose_face_hands.gif)"
    ]
   },
   {
